Fix for a Bootstrap issue (horizontal scroll-bar)

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -6,6 +6,8 @@ body {
 	height: 100%;
 	background: #e3e0ef url('../list_images/bg.png');
 	color:#363636;
+	/* Fix for a Bootstrap issue. It hides the unnecessary horizontal scroll-bar */
+        overflow-x: hidden;
 }
 
 a:hover { 
